@@ -162,3 +162,4 @@
 ( cvs diff -u -r 1.2.2.83 -r 1.2.2.84 src/vcal_folder.c;  ) > 1.101.0cvs17.patchset
 ( cvs diff -u -r 1.2.2.84 -r 1.2.2.85 src/vcal_folder.c;  ) > 1.101.0cvs18.patchset
 ( cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/month-view.c;  ) > 1.101.0cvs19.patchset
+( cvs diff -u -r 1.2.2.85 -r 1.2.2.86 src/vcal_folder.c;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/vcal_interface.h;  ) > 1.101.0cvs20.patchset
