@@ -1,3 +1,10 @@
+2008-03-27 [colin]	1.101.0cvs20
+
+	* src/vcal_folder.c
+	* src/vcal_interface.h
+		Fix interface a bit, move free where logical
+		Thanks to Holger Berndt
+
 2008-03-25 [colin]	1.101.0cvs19
 
 	* src/month-view.c
